test/zinc_source/compile_errors/control_flow/06_branch_without_value.zn
// expected-error: if-expression branches have incompatible types

fn main() {
    debug = true
    value = if debug {
        temp = 1
    } else {
        2
    }
}
